feat: 모바일 화면 배율 조정

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
         background-color: #020617; /* slate-950 */
         color: #f8fafc; /* slate-50 */
       }
+      @media (max-width: 640px) {
+        html {
+          font-size: 14px;
+        }
+      }
     </style>
   <script type="importmap">
 {
