--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="HGU4EYxFRCTG5VId2sJbwrOLnL8GlzQH8PAkT8vcPHc" />
     <title>모의고사 타이머 & 분석기</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
