feat: 즐겨찾기, 공유, 시험 기록 저장 기능 추가 및 UI 개선
- 브라우저 즐겨찾기 기능 추가
- SNS 공유 기능 추가 (헤더에 공유 아이콘)
- 시험 기록 저장 기능 추가 (베타)
- 모바일 반응형 UI 개선
- 테스트 환경 설정 (Vitest)
- PWA 준비 작업

--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
           font-size: 14px;
         }
       }
+      
+      /* 확대 시에도 레이아웃 보호 */
+      .modal-container {
+        min-width: 320px;
+        max-width: 100vw;
+        overflow-x: hidden;
+      }
+      
+      /* 확대 시 텍스트 줄바뀜 방지 */
+      .no-wrap {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     </style>
   <script type="importmap">
 {
