feat: 즐겨찾기, 공유, 시험 기록 저장 기능 추가 및 UI 개선

--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
     <meta name="application-name" content="모의고사 타이머 & 분석기" />
     <meta name="msapplication-TileColor" content="#3b82f6" />
     <meta name="msapplication-config" content="/browserconfig.xml" />
-    <link rel="canonical" href="https://mocktimer.kr" />
-    <link rel="alternate" hreflang="ko" href="https://mocktimer.kr" />
+    <link rel="canonical" href="https://www.mocktimer.kr" />
+    <link rel="alternate" hreflang="ko" href="https://www.mocktimer.kr" />
     
     <!-- Open Graph 메타 태그 -->
     <meta property="og:title" content="모의고사 타이머 & 분석기" />
     <meta property="og:description" content="수능, 공무원시험, LEET, CPA 등 다양한 시험을 위한 문제별 풀이 시간 측정 및 분석 도구입니다." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mocktimer.kr" />
+    <meta property="og:url" content="https://www.mocktimer.kr" />
     <meta property="og:site_name" content="모의고사 타이머 & 분석기" />
     <meta property="og:locale" content="ko_KR" />
-    <meta property="og:image" content="https://mocktimer.kr/og-image.png" />
+    <meta property="og:image" content="https://www.mocktimer.kr/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="모의고사 타이머 & 분석기" />
@@ -45,7 +45,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="모의고사 타이머 & 분석기" />
     <meta name="twitter:description" content="문제별 풀이 시간을 측정하고 분석하여 효율적인 시험 준비를 도와주는 도구입니다." />
-    <meta name="twitter:image" content="https://mocktimer.kr/og-image.png" />
+    <meta name="twitter:image" content="https://www.mocktimer.kr/og-image.png" />
     <meta name="twitter:image:alt" content="모의고사 타이머 & 분석기" />
     
     <!-- 구조화된 데이터 (JSON-LD) -->
@@ -56,7 +56,7 @@
       "name": "모의고사 타이머 & 분석기",
       "alternateName": ["시험 타이머", "문제풀이 타이머", "수능 타이머", "공무원시험 타이머"],
       "description": "수능, 공무원시험, LEET, CPA 등 다양한 시험을 위한 문제별 풀이 시간 측정 및 분석 도구입니다.",
-      "url": "https://mocktimer.kr",
+      "url": "https://www.mocktimer.kr",
       "applicationCategory": "EducationalApplication",
       "operatingSystem": "Web Browser",
       "browserRequirements": "Requires JavaScript. Requires HTML5.",
