--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     <link rel="dns-prefetch" href="https://esm.sh" />
     
     <!-- 파비콘 및 앱 아이콘 -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
